Cambiando el diseño

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://MarianoAlvarezz.github.io/ecommerce-reactjs",
+  "homepage": "https://MarianoAlvarezz.github.io/Ecommerce---ReactJS",
   "name": "ecommerce-reactjs",
   "version": "0.1.0",
   "private": true,
